<resources>
    <string name="app_name">LibraryIPPT</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_book">New book</string>
    <string name="required_field">Required field</string>

    <string name="dollaSign">$</string>

    <string name="isbn">ISBN</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="page_count">Page count</string>
    <string name="level">Level</string>
    <string name="state">State</string>
    <string name="count">Count</string>
    <string name="price">Price</string>

    <string name="delete_confirmation">Are you sure you want to delete this book?</string>
    <string name="login_error">Wrong password or username.</string>

    <string-array name="levels">
        <item>Default</item>
        <item>Medium</item>
        <item>Premium</item>
    </string-array>

    <string-array name="states">
        <item>Available</item>
        <item>Reserved</item>
        <item>Unavailable</item>
        <item>Sold</item>
    </string-array>

    <string name="discard_book">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="test">Test</string>
</resources>
